# rust-bcli

./: .gitignore  Cargo.toml  README.md
src/: main.rs  state.rs
tests/: pyproject.toml  test.py
