[package]
name = "rust-bcli"
version = "0.1.0"
edition = "2021"

[features]
default = []
nogetchaininfo = []
noestimatefees = []
nogetrawblockbyheight = []
nogetutxout = []
nosendrawtransaction = []


[dependencies]
anyhow = "1.0"
log = "0.4"
cln-plugin = "0.1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
bitcoin = { version = "0.28.1", features = [ "use-serde" ] }
bitcoin_hashes = { version = "0.10.0", features = [ "serde" ] }
bitcoincore-rpc = "0.15.0"
serde = "1.0.130"
serde_json = "1.0"
home = "0.5.3"
jsonrpc = "0.12.0"
cfg-if = "1.0.0"

[dev-dependencies]
tokio-test = "0.4.2"